# Modern-C-Course-For-CV

./: .gitignore  README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  main
homework_2/: CMakeLists.txt
homework_2/task_1/: task_1.cpp
homework_2/task_2/: task_2.cpp
homework_3/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  test.html
homework_3/src/: html_writer.cpp  image_browser.cpp  main.cpp
homework_4/: CMakeLists.txt  homework_4.hpp  main.cpp
week_1_lecture/CPP_CompilationSteps/: build_steps.sh  main  main.cpp  main.i  main.s  main.txt
week_1_lecture/Libraries/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  compile_commands.json  main  main.cpp  random.cpp  random.hpp
week_4_lecture/: stl_algotithms.cpp  stl_algotithms2.cpp
week_5_lecture/: directory_iterator.cpp  io_read.cpp  io_write.cpp  utilities.cpp
